--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /modules/admin/yubikeylogin/mod_yubikeylogin.xml
 /modules/*/language/en-GB
 /modules/admin/yubikeylogin/language/en-GB
+
+/.idea/workspace.xml
