Trying to get U2F working. I've now hit a point where OpenSSL gets in the way and I'm stuck. I need to buy another computer to run Ubuntu. OK, let's forget about it.

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@
 /build/buildlang
 /build/phingext
 /build/tools
-/plugins/twofactorauth/yubikeyplus/language/en-GB
-/plugins/twofactorauth/yubikeyplus/yubikeyplus.xml
-/plugins/twofactorauth/yubikeyplus/CHANGELOG
-/plugins/twofactorauth/yubikeyplus/LICENSE.txt
+/plugins/twofactorauth/*/language/en-GB
+/plugins/twofactorauth/*/*.xml
+/plugins/twofactorauth/*/CHANGELOG
+/plugins/twofactorauth/*/LICENSE.txt
 /documentation/*.xml~
 /build/templates/release.json
 /build/build.properties
