--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /build/buildlang
 /build/phingext
 /build/tools
-/plugins/twofactorauth/*/language/en-GB
+/plugins/twofactorauth/u2f/language/en-GB
+/plugins/twofactorauth/yubikeyplus/language/en-GB
 /plugins/twofactorauth/*/*.xml
 /plugins/twofactorauth/*/CHANGELOG
 /plugins/twofactorauth/*/LICENSE.txt
