Add a hybrid TFA method
It can use one of several configured YubiKeys OR a Google Authenticator code if you don't have access to your YubiKey(s)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /build/tools
 /plugins/twofactorauth/u2f/language/en-GB
 /plugins/twofactorauth/yubikeyplus/language/en-GB
+/plugins/twofactorauth/yubikeytotp/language/en-GB
 /plugins/twofactorauth/*/*.xml
 /plugins/twofactorauth/*/CHANGELOG
 /plugins/twofactorauth/*/LICENSE.txt
